# cruise-deal-hunter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_telegram_chats.py  0003_profiles_and_route_countries.py  0004_users_and_per_user_alerts.py
app/: alerts.py  bot.py  config.py  db.py  deals.py  detector.py  jobs.py  llm.py  matching.py  models.py  onboarding.py  profiles.py  scheduler.py  scrape.py  seed.py  visa.py
app/scrapers/: __init__.py  base.py  cruise24.py  cruiseportal24.py  dreamlines.py  kreuzfahrt_de.py  kreuzfahrtberater.py  kreuzfahrten.py  seascanner.py
tests/: test_cruise24.py  test_cruiseportal24.py  test_deals.py  test_detector.py  test_dreamlines.py  test_kreuzfahrt_de.py  test_kreuzfahrtberater.py  test_kreuzfahrten.py  test_matching.py  test_onboarding.py  test_profiles.py  test_sample_deal.py  test_seascanner.py  test_visa.py
tests/fixtures/: cruise24.de.html  cruiseportal24.json  cruiseportal24_page2_dict_shape.json  dreamlines.html  kreuzfahrt_de.json  kreuzfahrt_de_vendors.json  kreuzfahrtberater.de.html  kreuzfahrten.de.html  seascanner.json
