[project]
name = "cruise-deal-hunter"
version = "0.1.0"
description = "Personal tool that scrapes German cruise portals, tracks price history, and alerts on hot deals via Telegram."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10,<4",
    "python-telegram-bot>=21.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "groq>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Playwright is a last-resort fallback for JS-heavy portals.
# Install with: pip install -e ".[browser]" && playwright install chromium
browser = ["playwright>=1.44"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
